service-mesh/control-plane/base/resource-templates/04_filter-oauth2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: oauth2-ingress
  labels:
    name: oauth2-envoy
    app: odh
spec:
  priority: 10
  workloadSelector:
    labels:
      istio: ingressgateway # this is all or nothing option - we should narrow to more sane labels / ns?
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        service: oauth-openshift
    patch:
      operation: ADD
      value:
        name: oauth-openshift
        dns_lookup_family: V4_ONLY
        type: LOGICAL_DNS
        connect_timeout: 10s
        lb_policy: ROUND_ROBIN
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: $OAUTH_ROUTE
        load_assignment:
          cluster_name: oauth-openshift
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: $OAUTH_ROUTE
                    port_value: $OAUTH_PORT
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            # subFilter:
            #   name: "envoy.filters.http.jwt_authn"
    patch:
      operation: INSERT_BEFORE
      value:
       name: envoy.filters.http.oauth2
       typed_config:
         "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
         config:
          token_endpoint:
            cluster: oauth-openshift
            uri: $TOKEN_ENDPOINT
            timeout: 3s
          authorization_endpoint: $AUTH_ENDPOINT
          redirect_uri: "https://%REQ(:authority)%/callback"
          redirect_path_matcher:
            path:
              exact: /callback
          signout_path:
            path:
              exact: /oauth/sign_out
          credentials:
            client_id: odh
            token_secret:
              name: token
              sds_config:
                path: "/etc/istio/odh-oauth2/token-secret.yaml"
            hmac_secret:
              name: hmac
              sds_config:
                path: "/etc/istio/odh-oauth2/hmac-secret.yaml"
          auth_scopes:
            - user:full
          forward_bearer_token: true 
          # FIXME: This always bypasses authN for ModelMesh. It should not if
          # the model is flagged to be auth-protected.
          pass_through_matcher:
          - name: ":path"
            prefix_match: "/modelmesh/"
          - name: ":path"
            prefix_match: "/vmodel-route/"
          - name: content-type
            prefix_match: application/grpc
