service-mesh/control-plane/base/resource-templates/08_virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: odh-dashboard
spec:
  gateways:
  - odh-gateway
  hosts:
  - "opendatahub.$DOMAIN"
  http:
  - match:
    - uri:
        # match host.com/notebook/ns/username/logout 
        regex: "^/notebook/.*/.*/logout"
    route:
    - destination:
        host: odh-dashboard
        port:
          number: 80
    rewrite:
      uri: "/oauth/sign_out"
  - route:
    - destination:
        host: odh-dashboard
        port:
          number: 80
